# parallelAlgorithms

./: CMakeLists.txt  README.md  main.cpp  measure.cpp
Problems/: FindTopNWords.cpp
Search/: TopN.cpp  TopNModern.cpp  TopNOld.cpp
Sort/: BitonicSort.cpp  BitonicSort.hpp  BlockBarrier.cpp  QuickSort.cpp  QuickSort.hpp  QuickSortNaive.cpp  SortAlgorithms.cpp
Sort copy/: SortAlgorithms.cpp
Sort/ThreadPool/: PersistentThread.cpp  PersistentThreadPool.cpp  ThreadPoolQueue.cpp
Sort/ThreadPool/Thread/: ThreadEvent.cpp
data/: shakespeare.txt
profiles/QuickSortNaive_1bil_16cpu_1span.trace/: form.template
profiles/QuickSortNaive_1bil_16cpu_1span.trace/Trace1.run/: RunIssues.storedata
profiles/QuickSortNaive_1bil_16cpu_1span.trace/Trace3.run/: RunIssues.storedata  event_data_33794.oa
profiles/QuickSortNaive_1bil_16cpu_1span.trace/corespace/: MANIFEST.plist
profiles/QuickSortNaive_1bil_16cpu_2span.trace/: form.template
profiles/QuickSortNaive_1bil_16cpu_2span.trace/Trace2.run/: RunIssues.storedata
profiles/QuickSortNaive_1bil_16cpu_2span.trace/Trace4.run/: RunIssues.storedata  event_data_39234.oa
profiles/QuickSortWithPersistentThreadPool_1bil_16cpu_2span_PrealocBuf_DefBatchSize.trace/: form.template  open.creq
profiles/QuickSortWithPersistentThreadPool_1bil_16cpu_2span_PrealocBuf_DefBatchSize_allpointers.trace/: form.template
profiles/QuickSortWithPersistentThreadPool_1bil_16cpu_2span_PrealocBuf_DefBatchSize_pointers.trace/: form.template
profiles/QuickSortWithPersistentThreadPool_1bil_16cpu_2span_noPrealocBuf_noDefBatchSize.trace/: form.template
(+682 files in other folders)
